# discortix

./: .gitignore  README.md  config.sample.json  cypress.config.ts  index.html  package-lock.json  package.json
cypress/e2e/login/: with-password.cy.ts
cypress/e2e/rooms/: create-room.cy.ts
cypress/support/: commands.ts  e2e.ts
rust/vodozemac_bindings/: Cargo.toml
rust/vodozemac_bindings/src/: account.rs  lib.rs  pk_encryption.rs  session.rs
src/: App.vue  main.ts
src/composables/: account-data.ts  application.ts  broadcast.ts  crypto-keys.ts  devices.ts  emoji.ts  event-timeline.ts  keyboard.ts  login.ts  logout.ts  media-cache.ts  media.ts  megolm.ts  olm.ts  profiles.ts  rooms.ts  router-history.ts  server-capabilities.ts  server-discovery.ts  sync.ts  user-agent.ts
src/directives/: pointer.ts  timeline-event-render.ts
src/i18n/: en.json  index.ts
src/router/: index.ts
src/stores/: account-data.ts  client-settings.ts  crypto-keys.ts  megolm.ts  olm.ts  profile.ts  room.ts  session.ts  space.ts  sync.ts
src/stores/database/: discortix.ts
src/types/: api-capabilities.ts  api-events.ts  api-key-management.ts  api-legacy-authentication.ts  api-media.ts  api-room-key-backup.ts  api-rooms.ts  broadcast.ts  client-settings.ts  encryption.ts  index.ts  room.ts  secret-storage.ts  vue-router.ts
src/utils/: base-x.ts  base64.ts  crypto.ts  error.ts  file-access.ts  linkify.ts  message.ts  micromark.ts  timing.ts  vue.ts  zod.ts
src/views/: Discover.vue  Home.vue  Login.vue  MessageRequests.vue  Register.vue  Room.vue  RoomSettings.vue  UserSettings.vue
(+94 files in other folders)
